[workspace]
members = [
    "services",
    "dash",
    "dev",
    "cli",
]

[workspace.metadata.release]
verify = true
tag = false

[package]
name = "printnanny"
version = "0.22.0-rc.2"
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
edition = "2021"
rust-version = "1.59"
license = "AGPL-3.0-or-later"
description = "PrintNanny root package crate"
[dependencies]
printnanny-cli = { path = "cli", version = "^0.22.0-rc.1"}
printnanny-dash = { path = "dash", version = "^0.22.0-rc.1"}
printnanny-dev = { path = "dev", version = "^0.22.0-rc.1"}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"
[profile.release]
panic = "abort"
