[workspace]
members = [
    "cli",
    "db",
    "dbus",
    "gst-client-rs",
    "gst-pipelines",
    "gst-plugin",
    "snapshot",
    "settings",
    "services",
    "nats",
]


[profile.dev]
debug = 2
debug-assertions = true
opt-level = 0

[profile.test]
debug = 2
debug-assertions = true
opt-level = 0
