[package]
name = "printnanny-cli"
description = "PrintNanny Command-line Interface"
license = "AGPL-3.0-or-later"
license-file = "LICENSE"
version = "0.29.3"
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
edition = "2021"
rust-version = "1.63"
repository = "https://github.com/bitsy-ai/printnanny-cli.git"

[build]
targets = [
    "aarch64-unknown-linux-gnu",
    "armv7-unknown-linux-gnueabihf",
    "x86_64-unknown-linux-gnu",
]

[dependencies]
printnanny-services = {path = "../services", version = "^0.29.3"}
printnanny-nats = {path = "../nats", version = "^0.29.3"}
printnanny-api-client = "0.113.0"
figment = { version = "0.10", features = ["env", "json", "toml"] }
anyhow = { version = "1", features = ["backtrace"] }
clap = { version = "3", features = ["derive", "cargo", "env", "wrap_help"] }
env_logger = "0.9"
git-version = "0.3"
tokio = { version = "1.21", features = ["full", "rt-multi-thread"] }
log = "0.4"
serde_json = "1"
serde_bytes = "0.11"
toml = "0.5"
serde = "1"

[dependencies.function_name]
version = "0.2.0"
