[package]
name = "printnanny-dash"
description = "Print Nanny Device Management Dashboard"
license = "AGPL-3.0-or-later"
version = "0.13.4"
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
edition = "2018"

[dependencies]
printnanny-services = {path = "../services", version = "^0.13.0"}
printnanny-api-client = "0.48"
serde = "1.0.133"
thiserror = "1.0.30"
indexmap = "1.8.0"
log = "0.4" 
anyhow = "1"
serde_json = "1.0.74"
time = { version = "0.3", features = ["macros", "parsing"] }
tokio = "1.15.0"

[dependencies.clap]
version = "3.0"
features = ["cargo"]

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json","secrets", "tls"]

[dependencies.sqlx]
version = "0.5"
features = [ "runtime-tokio-rustls" ]

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]
