[package]
name = "printnanny-edge-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.0", features = ["sqlite", "extras"] }
printnanny-settings = { path = "../settings", version = "^0.4"}
