[package]
name = "printnanny-edge-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.0.2", features = ["sqlite", "extras", "serde_json"] }
log = "0.4"
printnanny-api-client = "0.124.4"    # Official Print Nanny Rust API Client
printnanny-settings = { path = "../settings", version = "^0.4"}
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
diesel = { version = "2.0.2", features = ["sqlite", "extras", "serde_json", "nightly-error-messages"] }
