[package]
name = "printnanny-dbus"
version = "0.1.0"
edition = "2021"
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
description = "D-bus APIs used by PrintNanny.ai"
license = "AGPL-3.0-or-later"
repository = "https://github.com/bitsy-ai/printnanny-cli.git"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = "3.5.0"            # API for D-Bus communication