[package]
name = "printnanny-dev"
description = "PrintNanny Developer Command-line Tools"
license = "AGPL-3.0-or-later"
version = "0.22.0-rc.2"
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
edition = "2021"
rust-version = "1.61"

[dependencies]
printnanny-services = {path = "../services", version = "^0.22.0-rc.1"}
printnanny-api-client = "0.80.0"
anyhow = { version = "1.0.44", features = ["backtrace"] }
clap = { version = "3", features = ["derive", "cargo", "env", "wrap_help"] }
env_logger = "0.9"
tokio = { version = "1.12.0", features = ["full"] }
log = "0.4"
serde_json = "1" 

[dependencies.function_name]
version = "0.2.0"
