[package]
name = "gst-client"
version = "0.1.2"
description = "Provides bindings for the main functionalities of the GStreamer Daemon"
authors = ["ALLATRA IT <it@allatra.org>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/ALLATRA-IT/gst-client-rs"
documentation = "https://docs.rs/gst-client"
keywords = ["gstreamer", "gstd", "API", "client"]
categories = ["web-programming::http-client"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.release]
allow-branch = ["master"]
dev-version = false
pre-release-replacements = [
    {file="README.md", search="[{{prev_version}}]+", replace="{{version}}"} ,
    {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
    {file="CHANGELOG.md", search="...HEAD", replace="...{{tag_name}}", exactly=1},
    {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}", min=1},
    {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n## [Unreleased] - ReleaseDate\n", exactly=1},
    {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: /../../tree/HEAD", exactly=1},
]

[dependencies]
mime = "0.3"
mime_serde_shim = "0.2"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
url = { version = "2.1", features = ["serde"] }
[dependencies.derive_more]
version = "0.99"
features = ["display", "error", "from"]
default-features = false
[dependencies.reqwest]
version = "0.11"
features = ["default-tls", "json"]
default-features = false


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
