[package]
name = "gst-client-rs"
version = "0.2.0"
description = "Provides bindings for the main functionalities of the GStreamer Daemon"
authors = ["ALLATRA IT <it@allatra.org>", "Leigh Johnson <leigh@printnanny.ai>"]
edition = "2021"
readme = "README.md"
license-file = "LICENSE.md"
repository = "https://github.com/printnanny-rs/gst-client-rs"
documentation = "https://docs.rs/gst-client-rs"
keywords = ["gstreamer", "gstd", "API", "client"]
categories = ["web-programming::http-client"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mime = "0.3"
mime_serde_shim = "0.2"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
url = { version = "2.1", features = ["serde"] }
[dependencies.derive_more]
version = "0.99"
features = ["display", "error", "from"]
default-features = false
[dependencies.reqwest]
version = "0.11"
features = ["default-tls", "json"]
default-features = false


[dev-dependencies]
tokio = { version = "1", features = ["macros"] }
