[package]
description = "PrintNanny Gstreamer Pipelines"
name = "printnanny-gst-pipelines"
version = "0.2.1"
edition = "2021"
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
license-file = "../LICENSE"
rust-version = "1.66"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"                                   # Flexible concrete Error type built on std::error::Error
clap = { version = "3", features = ["derive", "cargo", "env", "wrap_help"] }
gst-client = { package="gst-client-rs", path = "../gst-client-rs", version="^0.2" }
printnanny-edge-db = { path = "../db", version = "^0.2"}
printnanny-settings = { package="printnanny-settings", version = "^0.7", path="../settings" }
printnanny-nats-client = {path = "../nats-client", version = "^0.33.1"}
log = "0.4"                  # A lightweight logging facade for Rust 
serde = { version = "1", features = ["derive"] }
serde_json = "1"                # A JSON serialization file format
tokio = { version = "1.24", features = ["full", "rt-multi-thread", "rt"] }
