[package]
name = "printnanny-gst-plugin-rs"
description = "PrintNanny Gstreamer Plugins"
version = "0.1.0"
edition = "2021"
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
license = "AGPL-3.0-or-later"
rust-version = "1.63"
repository = "https://github.com/bitsy-ai/printnanny-gst-plugin-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"               # An n-dimensional array for general elements and for numerics. Lightweight array views and slic…
arrow = "23.0.0"                     # Rust implementation of Apache Arrow
byte-slice-cast = "1.2.1"    # Safely cast bytes slices from/to slices of built-in fundamental numeric types
flexbuffers = "2.0.0"                  # Official FlexBuffers Rust runtime library.
flatbuffers = "2.1.2"             # Official FlatBuffers Rust runtime library.
libc = "0.2.134"             # Raw FFI bindings to platform libraries like libc.
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-sys = { package = "gstreamer-sys", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
once_cell = "1.0"
thiserror = "1.0.37"               # derive(Error)
polars = { version = "0.24.3", features = [
    "algo",
    "cum_agg", 
    "cumulative_eval", 
    "cumulative_eval", 
    "dot_product", 
    "dtype-struct",
    "dtype-datetime",
    "dtype-time",
    "dynamic_groupby", 
    "fmt",
    "ipc_streaming",
    "ipc",
    "json",
    "lazy",
    "list_to_struct", 
    "list", 
    "ndarray", 
    "serde-lazy",
    "serde",
    "temporal",
]}
printnanny-ws = {path = "../ws", version = "0.1.0"}
serde = { version = "1", features = ["derive"] }

[lib]
name = "gstprintnanny"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dev-dependencies]
glob = "0.3.0"              # Support for matching file paths against Unix shell style patterns.
gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", features = ["v1_20"] }
tempdir = "0.3.7"                   # A library for managing a temporary directory and deleting all contents when it's dropped.

[build-dependencies]
gst-plugin-version-helper = {  git = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs" }
