[package]
name = "printnanny-gst-plugin"
description = "PrintNanny Gstreamer Plugins"
version = "0.6.0"
edition = "2021"
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
license-file = "LICENSE"
rust-version = "1.66"
repository = "https://github.com/bitsy-ai/printnanny-gst-plugin-rs/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"                                   # Flexible concrete Error type built on std::error::Error
nats = "0.23"
ndarray = "0.15"               # An n-dimensional array for general elements and for numerics. Lightweight array views and slic…
arrow = "23.0"                     # Rust implementation of Apache Arrow
bytes = { version = "1.2", features = ["std"] }                            # Types and traits for working with bytes
byte-slice-cast = "1.2"    # Safely cast bytes slices from/to slices of built-in fundamental numeric types
clap = { version = "3", features = ["derive", "cargo", "env", "wrap_help"] }
libc = "0.2"             # Raw FFI bindings to platform libraries like libc.
env_logger = "0.9.1"              # A logging implementation for `log` which is configured via an environment variable. 
log = "0.4"                  # A lightweight logging facade for Rust 
git-version = "0.3"
gst = { package = "gstreamer", features = ["v1_20"], version = "0.19" }
gst-app = { package = "gstreamer-app", features = ["v1_20"], version = "0.19"}
gst-sys = { package = "gstreamer-sys", features = ["v1_20"], version = "0.19"}
gst-base = { package = "gstreamer-base", features = ["v1_20"], version = "0.19"}
gst-video = { package = "gstreamer-video", features = ["v1_20"], version = "0.19"}
printnanny-settings = { package="printnanny-settings", version = "^0.7", path="../settings" }
once_cell = "1.0"
thiserror = "1.0"               # derive(Error)
polars = { version = "0.24", features = [
    "algo",
    "cum_agg", 
    "cumulative_eval", 
    "dot_product", 
    "dtype-struct",
    "dtype-datetime",
    "dtype-time",
    "dynamic_groupby", 
    "fmt",
    "ipc_streaming",
    "ipc",
    "json",
    "lazy",
    "list_to_struct", 
    "list", 
    "ndarray", 
    "serde-lazy",
    "serde",
    "temporal",
]}
rand = "0.8.5"              # Random number generators and other randomness functionality. 

serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21", features = ["full", "rt-multi-thread", "rt"] }

[lib]
name = "gstprintnanny"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dev-dependencies]
glob = "0.3"              # Support for matching file paths against Unix shell style patterns.
gst-check = { package = "gstreamer-check", features = ["v1_20"],  version = "0.19"}
tempdir = "0.3"                   # A library for managing a temporary directory and deleting all contents when it's dropped.

[build-dependencies]
gst-plugin-version-helper = {  version = "0.7"}
