[package]
name = "printnanny-nats-apps"
description = "Edge NATS applications"
license = "AGPL-3.0-or-later"
version = "0.33.1"
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
edition = "2021"
rust-version = "1.66"
repository = "https://github.com/bitsy-ai/printnanny-rs.git"

[[bin]]
name = "dbus-systemd-nats-adapter"

[[bin]]
name = "nats-edge-worker"

[[bin]]
name = "nats-gstmultifile"

[features]
default = []
systemd = []

[dependencies]
anyhow = "1"
async-nats = "0.26"
async-process = "1.4.0"
async-trait = "0.1.58"
async-tempfile = "0.2"                      # Automatically deleted async I/O temporary files.
bytes = "1.2"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "3", features = ["derive", "cargo", "env", "wrap_help"] }

env_logger = "0.9"
futures = "0.3"
futures-util = "0.3.25"        # Common utilities and extension traits for the futures-rs library. 
git-version = "0.3"
log = "0.4"
nix = {version = "0.26.1", features = ["net"]}
printnanny-api-client = "0.131.8"
printnanny-dbus = { path = "../dbus", version = "^0.5"}
printnanny-edge-db = { path = "../db", version = "^0.2"}
printnanny-gst-pipelines = { path = "../gst-pipelines", version = "^0.2", package="printnanny-gst-pipelines"}
printnanny-octoprint-models = "0.1.9" 
printnanny-nats-client = {path = "../nats-client", version = "^0.33.1"}
printnanny-settings = { path = "../settings", version = "^0.7"}
printnanny-services = {path = "../services", version = "^0.33.1"}
printnanny-snapshot = {path = "../snapshot", version = "^0.1.1"}

reqwest = { version = "0.11", features = ["gzip", "stream", "json"]}
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_variant = "0.1.1"
serde-reflection = "0.3.6"
sysinfo = "0.26"
thiserror = "1"
tokio = { version = "1.24", features = ["full", "rt-multi-thread", "rt"] }
tokio-serde = { version="0.8", features = ["json"] }
tokio-util = { version="0.7", features = ["codec"] }
uuid = { version="1.1.2", features = ["v4"] }


[dev-dependencies]
test-log = "0.2"
figment = { version = "0.10", features = ["env", "json", "toml", "test"] }
