[package]
name = "printnanny-nats"
description = "Library of MQTT, API, and other services used by PrintNanny"
license = "AGPL-3.0-or-later"
version = "0.25.0"
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
edition = "2021"
rust-version = "1.59"

[[bin]]
name = "nats-cloud-publisher"

[[bin]]
name = "nats-cloud-worker"

[[bin]]
name = "nats-edge-worker"

[dependencies]
anyhow = "1"
async-nats = "0.18.0"
async-process = "1.4.0"
bytes = "1.2"
chrono = "0.4.22"
clap = { version = "3", features = ["derive", "cargo", "env", "wrap_help"] }
env_logger = "0.9"
futures = "0.3"
log = "0.4"
printnanny-api-client = "0.107.2"
printnanny-services = {path = "../services", version = "^0.25.0"}
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_variant = "0.1.1"
serde-reflection = "0.3.6"
thiserror = "1"
tokio = "1.20"
tokio-serde = { version="0.8", features = ["json"] }
tokio-util = { version="0.7", features = ["codec"] }
uuid = { version="1.1.2", features = ["v4"] }


[dev-dependencies]
test-log = "0.2" 
