[package]
name = "pn-oslink"
version = "0.1.0"
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
edition = "2018"

[dependencies]
rocket = "0.5.0-rc.1"
time = { version = "0.3", features = ["macros", "parsing"] }

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]