[package]
name = "printnanny-services"
description = "Library of MQTT, API, and other services used by PrintNanny"
license = "AGPL-3.0-or-later"
version = "0.19.7"
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
edition = "2021"
rust-version = "1.59"

[dependencies]
async-process = "1.3.0"
async-trait = "0.1"
anyhow = { version = "1.0.44", features = ["backtrace"] }
bytes = "1.1.0"
chrono = "0.4.19"
clap = { version = "3", features = ["derive", "cargo", "env", "wrap_help"] }
config = "0.11.0"
console = "0.14.1"
dialoguer = "0.8.0"
dirs = "4.0.0"
figment = { version = "0.10", features = ["env", "json", "toml"] }
futures = "0.3.21"
glob = "0.3.0"
http = "0.2.5"
jsonwebtoken = "7"
log = "0.4"
printnanny-api-client = "0.71.5"
procfs = "0.12"
rumqttc = "0.10"
rustls = "0.19"
tokio-rustls = "0.22"
serde = { version = "1.0.130", features = ["derive"] }
serde_with = "1.11.0"
serde_prefix = "0.1.0"
serde_json = "1.0.68"
sha2 = "0.9.8"
sys-info = "0.9"
rand = "0.8"
reqwest = "0.11"
tempfile = "3.3.0"
thiserror = "1.0.29"
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version="0.7.0", features = ["codec"] }
tokio-serde = { version="0.8.0", features = ["json"] }
toml = "0.5.8"
openssl = { version = "=0.10.36", features = ["vendored"] }
warp = "0.3"

[dev-dependencies]
assert_cmd = "2.0.2"
mockall = "0.10.2"
predicates = "2.0.3"
tempdir = "0.3.7"
figment = { version = "0.10", features = ["env", "json", "toml", "test"] }
test-log = "0.2.8" 
env_logger = "0.9"
