[package]
name = "printnanny-services"
description = "Library of MQTT, API, and other services used by PrintNanny"
license = "AGPL-3.0-or-later"
version = "0.24.3"
authors = ["Leigh Johnson <leigh@bitsy.ai>"]
edition = "2021"
rust-version = "1.59"
[build]
targets = [
    "aarch64-unknown-linux-gnu",
    "armv7-unknown-linux-gnueabihf",
    "x86_64-unknown-linux-gnu",
]
[dependencies]
async-process = "1.3"
anyhow = { version = "1", features = ["backtrace"] }
bytes = "1"
chrono = "0.4"
clap = { version = "3", features = ["derive", "cargo", "env", "wrap_help"] }
config = "0.11"
console = "0.14"
dialoguer = "0.8"
file-lock = "2.1.4"
figment = { version = "0.10", features = ["env", "json", "toml"] }
futures = "0.3"
glob = "0.3.0"
hex = "0.4"
http = "0.2.5"
jsonwebtoken = "7"
log = "0.4"
printnanny-api-client = "0.93.4"
procfs = "0.12"
rumqttc = "0.10"
rustls = "0.19"
tokio-rustls = "0.22"
serde = { version = "1", features = ["derive"] }
serde_with = "1.11"
serde_json = "1"
sha2 = "0.9.8"
sys-info = "0.9"
rand = "0.8"
reqwest = "0.11"
thiserror = "1"
tokio = { version = "1.19" }
tokio-util = { version="0.7", features = ["codec"] }
tokio-serde = { version="0.8", features = ["json"] }
toml = "0.5"
openssl = { version = "0.10" }
warp = "0.3"

[dev-dependencies]
assert_cmd = "2.0.2"
mockall = "0.10"
predicates = "2"
figment = { version = "0.10", features = ["env", "json", "toml", "test"] }
test-log = "0.2.8" 
env_logger = "0.9"
