[package]
name = "printnanny-services"
description = "Library of MQTT, API, and other services used by PrintNanny"
license = "AGPL-3.0-or-later"
version = "0.33.0"
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
edition = "2021"
rust-version = "1.66"

[dependencies]
async-process = "1.3"
async-stream = "0.3.3"             # Asynchronous streams using async & await notation
async-trait = "0.1"
anyhow = { version = "1", features = ["backtrace"] }
chrono = "0.4.22"
config = "0.11"
console = "0.14"
dialoguer = "0.8"
file-lock = "2.1.4"
futures = "0.3"
hex = "0.4"
http = "0.2.5"
jsonwebtoken = "7"
lazy_static = "1"            # A macro for declaring lazily evaluated statics in Rust.
log = "0.4"
parking_lot = "0.12.1"                  # More compact and efficient implementations of the standard synchronization primitives.
printnanny-api-client = "0.127.1"
printnanny-dbus = { path = "../dbus", version = "^0.5"}
printnanny-settings = { path = "../settings", version = "^0.6"}
printnanny-edge-db = { path = "../db", version = "^0.2"}
procfs = "0.12"
rustls = "0.19"
tokio-rustls = "0.22"
sha2 = "0.9.8"
rand = "0.8"
reqwest = { version = "0.11", features = ["gzip", "stream"]}
sysinfo = "0.26.2"
tempfile = "3.3.0"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.24", features = ["full","process", "rt-multi-thread", "rt"] }
tokio-util = { version="0.7", features = ["codec"] }
tokio-serde = { version="0.8", features = ["json"] }
url = "2.3.1"                 # URL library for Rust, based on the WHATWG URL Standard
warp = "0.3"
zip = { version = "0.6.2", default-features = false, features=["zstd"] }

[dev-dependencies]
assert_cmd = "2.0.2"
mockall = "0.10"
predicates = "2"
figment = { version = "0.10", features = ["env", "json", "toml", "test"] }
test-log = "0.2" 
env_logger = "0.9"
