[package]
name = "printnanny-snapshot"
version = "0.1.1"
edition = "2021"
license = "AGPL-3.0-or-later"
rust-version = "1.68"
authors = ["Leigh Johnson <leigh@printnanny.ai>"]
description = "Serve the latest JPEG snapshot from a directory"
repository = "https://github.com/bitsy-ai/printnanny-rs.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.4"                            # Types and traits for working with bytes
rocket = "0.5.0-rc.2"                    # Web framework for nightly with a focus on ease-of-use, expressibility, and speed.
printnanny-settings = { path = "../settings", version = "^0.7"}
reqwest = "0.11"                               # higher level HTTP client library
url = { version = "2.1", features = ["serde"] }
