[package]
name = "printnanny-ws"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "websocket-tcp-server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13"
actix-web = "4"
actix-codec = "0.5"        # Codec utilities for working with framed protocols
actix-files = "0.6.2"            # Static file serving for Actix Web
actix-web-actors = "4.1"         # Actix actors support for Actix Web
env_logger = "0.9"              # A logging implementation for `log` which is configured via an environment variable. 
log = "0.4"                  # A lightweight logging facade for Rust 
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
tokio = { version = "1.21", features = ["full"] }
tokio-util = "0.7.4"                   # Additional utilities for working with Tokio. 

[lib]
crate-type = ["rlib"]
path = "src/lib.rs"
